--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: #https://butterbeerbar.github.io
+url: https://butterbeerbar.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -101,7 +101,7 @@ theme: chromate
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
-deploy:
-  type: git
-  repository: git@github.com:butterbeerbar/butterbeerbar.github.io.git
-  branch: main
+#deploy:
+#  type: git
+#  repository: git@github.com:butterbeerbar/butterbeerbar.github.io.git
+#  branch: main
